--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,7 @@
         "post-install-cmd": [
             "php artisan clear-compiled",
             "php artisan optimize",
-            "chmod -R 777 public_html/"
+            "chmod -R 777 public/"
         ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
