--- a/composer.json
+++ b/composer.json
@@ -39,8 +39,6 @@
         }
     },
     "scripts": {
-
-        
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
@@ -50,7 +48,12 @@
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover"
-        ]
+        ],
+        "post-install-cmd": [
+            "php artisan clear-compiled",
+            "php artisan optimize",
+            "chmod -R 777 public_html/"
+        ],
     },
     "config": {
         "preferred-install": "dist",
